refactor: 주문 상품 반정규화 및 상품 통계 테이블 생성